--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -11,7 +11,7 @@
     display: inline-block;
     min-width: 150px;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1.2em;
     text-transform: uppercase;
     border-bottom: 3px solid transparent;
     &:hover,
